Added comments for all code blocks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         went to school right out of high school through Everett Community College and completed enough credits for an AA
         in Arts and Science after 2 years. I briefly worked at a TopGolf in 2020, which if you have never been to one,
         its
-        basically a glorified driving range. My goals are, since learning to code is my first career based skill, to
+        basically a glorified driving range. My goals are, since learning to code is my first career-based skill, to
         finish this boot camp and be knowledgable to the point where I can land a career in software development.</p>
     </section>
   </main>
