Adds number guessing game after the about me guessing game

--- a/index.html
+++ b/index.html
@@ -15,17 +15,6 @@
   </header>
 
   <main>
-    <section id="places" class="midsection">
-      <p>This section will have places I've been</p>
-    </section>
-
-    <section id="hobbies" class="midsection">
-      <p>This section will have hobbies</p>
-    </section>
-
-    <section id="food" class="midsection">
-      <p>This section will have favorite food</p>
-    </section>
 
     <section id="biography">
       <p>Hello, and welcome to my About Me page! I appreciate you taking the time to learn about me so I'll keep it
@@ -36,6 +25,41 @@
         basically a glorified driving range. My goals are, since learning to code is my first career-based skill, to
         finish this boot camp and be knowledgable to the point where I can land a career in software development.</p>
     </section>
+
+    <section id="education" class="midsection">
+      <ul>
+        <p>These is my education history</p>
+        <li>Some credits from Arizona State University in 2020</li>
+        <li>AA in Arts and Sciences from Everett Community College in 2021</li>
+        <li>101, 102, and 201 from Code Fellows in 2021</li>
+      </ul>
+    </section>
+
+    <section id="work" class="midsection">
+      <ul>
+        <p>This is my work experience</p>
+        <li>Parking Attendent at the Evergreen State Fair in 2017</li>
+        <li>Parking Lead at the Evergreen State Fair in 2018</li>
+        <li>Guest Services/Food Runner at TopGolf in Arizona in 2020</li>
+      </ul>
+    </section>
+
+    <section id="movies" class="midsection">
+      <ol>
+        <p>These are my top 10 favorite TV shows and movies</p>
+        <li>Dexter</li>
+        <li>Breaking Bad</li>
+        <li>Saiki K</li>
+        <li>Erased</li>
+        <li>The Seven Deadly Sins</li>
+        <li>Steins;Gate</li>
+        <li>Borat</li>
+        <li>Star Trek (with William Shatner)</li>
+        <li>The Flash</li>
+        <li>Hunter x Hunter</li>
+      </ol>
+    </section>
+
   </main>
 
   <footer>
